- fix #27: a read/update action was duplicating books locally due to a UUID mixup - add better visible help/info for the calibre virt libs extension

--- a/app/src/main/res/layout-land/fragment_calibre_library_mapper.xml
+++ b/app/src/main/res/layout-land/fragment_calibre_library_mapper.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -41,6 +41,23 @@
             app:layout_constraintGuide_percent="0.5"
             />
 
+        <!-- actual text is dynamic with a url embedded -->
+        <TextView
+            android:id="@+id/inf_ext_not_installed"
+            style="@style/Text.Error"
+            android:layout_marginStart="@dimen/field_margin_start"
+            android:layout_marginEnd="@dimen/field_margin_end"
+            android:layout_marginTop="@dimen/section_margin_top"
+            android:drawableStart="@drawable/ic_baseline_warning_24"
+            android:drawablePadding="@dimen/field_margin_inline"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible"
+            tools:text="@string/lbl_calibre_content_server"
+            tools:ignore="UseCompatTextViewDrawableXml" />
+
         <TextView
             android:id="@+id/header"
             style="@style/Text.Header"
@@ -48,18 +65,8 @@
             android:layout_height="wrap_content"
             android:text="@string/lbl_library"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/inf_ext_not_installed"
             tools:ignore="UseCompatTextViewDrawableXml"
-            />
-
-        <Button
-            android:id="@+id/inf_ext_not_installed"
-            style="@style/Button.InfoPopup"
-            android:contentDescription="@string/info_calibre_content_server_extension"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@id/header"
-            app:layout_constraintStart_toEndOf="@id/header"
-            tools:visibility="visible"
             />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -121,12 +128,12 @@
             android:text="@string/lbl_virtual_libraries"
             android:visibility="gone"
             app:layout_constraintStart_toEndOf="@id/col1"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/inf_ext_not_installed"
             tools:visibility="visible"
             />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/virtualLibraries"
+            android:id="@+id/virtual_libraries"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_margin="@dimen/container_margin"
