--- a/app/src/main/res/layout/activity_admin_search.xml
+++ b/app/src/main/res/layout/activity_admin_search.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2022 HardBackNutter
+  ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -54,6 +54,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        />
+
+    <include
+        android:id="@+id/progress_frame"
+        layout="@layout/dialog_progress"
+        android:visibility="gone"
+        tools:visibility="invisible"
         />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
