--- a/app/src/main/res/values/donottranslate.xml
+++ b/app/src/main/res/values/donottranslate.xml
@@ -250,6 +250,15 @@
         <item>1</item>
     </string-array>
 
+    <string-array name="pe_bob_cover_long_click">
+        <item>@string/pe_bob_cover_long_click_ignore</item>
+        <item>@string/pe_bob_cover_long_click_popupmenu</item>
+    </string-array>
+    <string-array name="pv_bob_cover_long_click">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
     <!-- ListPreference - fastscroller text overlay. -->
     <string-array name="pe_fastscroller_overlay">
         <item>@string/pe_fast_scroller_overlay_dynamic</item>
