--- a/app/src/main/res/xml/preferences_style.xml
+++ b/app/src/main/res/xml/preferences_style.xml
@@ -106,11 +106,22 @@
 
         <ListPreference
             android:defaultValue="0"
+            android:dependency="style.booklist.show.thumbnails"
             android:entries="@array/pe_bob_cover_click"
             android:entryValues="@array/pv_bob_cover_click"
             android:icon="@drawable/ic_baseline_image_24"
             android:key="style.booklist.cover.click"
             android:title="@string/pt_bob_cover_click"
+            />
+
+        <!-- Only visible in grid-mode -->
+        <ListPreference
+            android:defaultValue="0"
+            android:entries="@array/pe_bob_cover_long_click"
+            android:entryValues="@array/pv_bob_cover_long_click"
+            android:icon="@drawable/ic_baseline_image_24"
+            android:key="style.booklist.cover.click.long"
+            android:title="@string/pt_bob_cover_long_click"
             />
 
         <!-- default Style.IMAGE_SCALE_2_MEDIUM == 2 -->
