--- a/app/src/main/res/values/cover-image.xml
+++ b/app/src/main/res/values/cover-image.xml
@@ -119,7 +119,7 @@
          (see com/hardbacknutter/nevertoomanybooks/booklist/adapter/CoverHelper.java
           for the latter)
     -->
-    <array name="cover_book_list_longest_side">
+    <array name="cover_max_width">
         <!-- hidden -->
         <item>0dp</item>
         <!-- small: 2 * 40dp
