--- a/app/src/main/res/values/cover-image.xml
+++ b/app/src/main/res/values/cover-image.xml
@@ -104,55 +104,25 @@
     <dimen name="cover_browser_preview_height">150dp</dimen>
     <dimen name="cover_browser_preview_width">96dp</dimen>
 
-    <!-- BoB layout. The length of the longest side of a cover.
-         We use a square space for the image so both
-         portrait/landscape cover images work out.
-         TODO 2024-01: this needs a rethink... it should really be the WIDTH
-          and we should not care about the height other than being proportional.
-          Schedule this for a 6.0 release.
+    <!-- BoB. The maximum width of a cover image
+        indexed by the user-preference CoverScale.
 
-         The user-preference (cover-scale) is an int (0..4)
-         which is used as the index to this array.
-
-         The sizes are calculated at {0, 2, 3, 5, 8} * 40dp
-         Width is set at a ratio 0.60 (common for paperbacks)
-         (see com/hardbacknutter/nevertoomanybooks/booklist/adapter/CoverHelper.java
-          for the latter)
+         The sizes are calculated as multiples of 40dp
     -->
     <array name="cover_max_width">
         <!-- hidden -->
         <item>0dp</item>
-        <!-- small: 2 * 40dp
-            List-mode Portrait : ok
-            List-mode Landscape: ok
-            Grid-mode Portrait : 4 images.
-            Grid-mode Landscape: 6 images.
-        -->
+        <!-- small: 2 * 40dp -->
         <item>80dp</item>
-        <!-- medium: 3 * 40dp - the default.
-            List-mode Portrait : ok
-            List-mode Landscape: ok
-            Grid-mode Portrait : 2 images.
-            Grid-mode Landscape: 4 images.
-        -->
+        <!-- medium: 3 * 40dp - the default. -->
         <item>120dp</item>
-        <!-- large: 5 * 40dp
-            List-mode Portrait : the text aside the image will be severely wrapped.
-            List-mode Landscape: ok
-            Grid-mode Portrait : 1 images.
-            Grid-mode Landscape: 2 images.
+        <!-- large: 4 * 40dp -->
+        <item>160dp</item>
+        <!-- X-large: 5 * 40dp
+            If the device is in Portrait, the text aside the image will be severely wrapped.
+            For Landscape all is ok.
         -->
         <item>200dp</item>
-        <!-- X-Large: 8 * 40dp
-            This size is meant for grid-mode ONLY.
-
-            List-mode Portrait: NOT suited, all text will be hidden.
-                                Oblong images will be cropped on the right.
-            List-mode Landscape: ok
-            Grid-mode Portrait : 1 image; fills the entire width.
-            Grid-mode Landscape: 1 image; minimal white band on the right.
-        -->
-        <item>320dp</item>
     </array>
 
     <!-- used as "tools:" defaults in the BoB layout.
