--- a/app/src/main/res/values-land/cover-image.xml
+++ b/app/src/main/res/values-land/cover-image.xml
@@ -31,26 +31,26 @@
     <dimen name="cover_details_0_padding">10dp</dimen>
     <dimen name="cover_details_1_padding">10dp</dimen>
 
-    <!-- multiplier: 1.5 -->
+    <!-- 100/60 multiplier: 1.5 -->
     <dimen name="cover_details_0_height">150dp</dimen>
-    <dimen name="cover_details_0_width">96dp</dimen>
-    <!-- multiplier: 0.6 -->
+    <dimen name="cover_details_0_width">90dp</dimen>
+    <!-- 100/60 multiplier: 0.6 -->
     <dimen name="cover_details_1_height">60dp</dimen>
-    <dimen name="cover_details_1_width">38dp</dimen>
+    <dimen name="cover_details_1_width">36dp</dimen>
 
-    <!-- multiplier: 1 -->
+    <!-- 100/60 multiplier: 1 -->
     <dimen name="cover_edit_0_height">100dp</dimen>
-    <dimen name="cover_edit_0_width">64dp</dimen>
+    <dimen name="cover_edit_0_width">60dp</dimen>
     <dimen name="cover_edit_1_height">100dp</dimen>
-    <dimen name="cover_edit_1_width">64dp</dimen>
+    <dimen name="cover_edit_1_width">60dp</dimen>
 
-    <!-- multiplier: 0.6 -->
+    <!-- 100/60 multiplier: 0.6 -->
     <dimen name="cover_browser_gallery_height">60dp</dimen>
-    <dimen name="cover_browser_gallery_width">38dp</dimen>
+    <dimen name="cover_browser_gallery_width">36dp</dimen>
 
-    <!-- multiplier: 1.2 -->
+    <!-- 100/60 multiplier: 1.2 -->
     <dimen name="cover_browser_preview_height">120dp</dimen>
-    <dimen name="cover_browser_preview_width">76dp</dimen>
+    <dimen name="cover_browser_preview_width">72dp</dimen>
 
     <integer name="cover_browser_gallery_span_count">1</integer>
 
