--- a/app/src/main/res/values-sw360dp/cover-image.xml
+++ b/app/src/main/res/values-sw360dp/cover-image.xml
@@ -35,26 +35,26 @@
     <dimen name="cover_details_0_padding">10dp</dimen>
     <dimen name="cover_details_1_padding">10dp</dimen>
 
-    <!-- multiplier: 2.50 -->
+    <!-- 100/60 multiplier: 2.50 -->
     <dimen name="cover_details_0_height">250dp</dimen>
-    <dimen name="cover_details_0_width">160dp</dimen>
-    <!-- multiplier: 1.25 -->
+    <dimen name="cover_details_0_width">150dp</dimen>
+    <!-- 100/60 multiplier: 1.25 -->
     <dimen name="cover_details_1_height">125dp</dimen>
-    <dimen name="cover_details_1_width">80dp</dimen>
+    <dimen name="cover_details_1_width">75dp</dimen>
 
-    <!-- multiplier: 1.25 -->
+    <!-- 100/60 multiplier: 1.25 -->
     <dimen name="cover_edit_0_height">125dp</dimen>
-    <dimen name="cover_edit_0_width">80dp</dimen>
+    <dimen name="cover_edit_0_width">75dp</dimen>
     <dimen name="cover_edit_1_height">125dp</dimen>
-    <dimen name="cover_edit_1_width">80dp</dimen>
+    <dimen name="cover_edit_1_width">75dp</dimen>
 
-    <!-- multiplier: 1.0 -->
+    <!-- 100/60 multiplier: 1.0 -->
     <dimen name="cover_browser_gallery_height">100dp</dimen>
-    <dimen name="cover_browser_gallery_width">64dp</dimen>
+    <dimen name="cover_browser_gallery_width">60dp</dimen>
 
-    <!-- multiplier: 2.5 -->
+    <!-- 100/60 multiplier: 2.5 -->
     <dimen name="cover_browser_preview_height">250dp</dimen>
-    <dimen name="cover_browser_preview_width">160dp</dimen>
+    <dimen name="cover_browser_preview_width">150dp</dimen>
 
     <dimen name="cover_browser_gallery_text_size">11sp</dimen>
     <integer name="cover_browser_gallery_span_count">2</integer>
