--- a/app/src/main/res/values-sw600dp/cover-image.xml
+++ b/app/src/main/res/values-sw600dp/cover-image.xml
@@ -27,26 +27,26 @@
     <dimen name="cover_details_0_padding">15dp</dimen>
     <dimen name="cover_details_1_padding">15dp</dimen>
 
-    <!-- multiplier: 3 -->
+    <!-- 100/60 multiplier: 3 -->
     <dimen name="cover_details_0_height">300dp</dimen>
-    <dimen name="cover_details_0_width">192dp</dimen>
-    <!-- multiplier: 1.5 -->
+    <dimen name="cover_details_0_width">180dp</dimen>
+    <!-- 100/60 multiplier: 1.5 -->
     <dimen name="cover_details_1_height">150dp</dimen>
-    <dimen name="cover_details_1_width">96dp</dimen>
+    <dimen name="cover_details_1_width">90dp</dimen>
 
-    <!-- multiplier: 1.5 -->
+    <!-- 100/60 multiplier: 1.5 -->
     <dimen name="cover_edit_0_height">150dp</dimen>
-    <dimen name="cover_edit_0_width">96dp</dimen>
+    <dimen name="cover_edit_0_width">90dp</dimen>
     <dimen name="cover_edit_1_height">150dp</dimen>
-    <dimen name="cover_edit_1_width">96dp</dimen>
+    <dimen name="cover_edit_1_width">90dp</dimen>
 
-    <!-- multiplier: 1.5 -->
+    <!-- 100/60 multiplier: 1.5 -->
     <dimen name="cover_browser_gallery_height">150dp</dimen>
-    <dimen name="cover_browser_gallery_width">96dp</dimen>
+    <dimen name="cover_browser_gallery_width">90dp</dimen>
 
-    <!-- multiplier: 2.5 -->
+    <!-- 100/60 multiplier: 2.5 -->
     <dimen name="cover_browser_preview_height">250dp</dimen>
-    <dimen name="cover_browser_preview_width">160dp</dimen>
+    <dimen name="cover_browser_preview_width">150dp</dimen>
 
     <dimen name="cover_browser_gallery_text_size">14sp</dimen>
     <integer name="cover_browser_gallery_span_count">2</integer>
