--- a/app/src/main/res/values/cover-image.xml
+++ b/app/src/main/res/values/cover-image.xml
@@ -54,25 +54,25 @@
          These are the MAXIMUM dimensions.
          Images will always be scaled to fit this box.
 
-        A height of "100dp" and width of "64dp" is considered the default, i.e. multiplier: 1
+        A height of "100dp" and width of "60dp" is considered the default, i.e. multiplier: 1
         -->
     <dimen name="cover_details_0_padding">10dp</dimen>
     <dimen name="cover_details_1_padding">10dp</dimen>
 
-    <!-- multiplier: 1.8 -->
+    <!-- 100/60 multiplier: 1.8 -->
     <dimen name="cover_details_0_height">180dp</dimen>
-    <dimen name="cover_details_0_width">115dp</dimen>
-    <!-- multiplier: 0.9 -->
+    <dimen name="cover_details_0_width">108dp</dimen>
+    <!-- 100/60 multiplier: 0.9 -->
     <dimen name="cover_details_1_height">90dp</dimen>
-    <dimen name="cover_details_1_width">57dp</dimen>
+    <dimen name="cover_details_1_width">54dp</dimen>
 
     <!-- Book edit layout. -->
-    <!-- multiplier: 1 -->
+    <!-- 100/60 multiplier: 1 -->
     <dimen name="cover_edit_0_height">100dp</dimen>
-    <dimen name="cover_edit_0_width">64dp</dimen>
-    <!-- multiplier: 1 -->
+    <dimen name="cover_edit_0_width">60dp</dimen>
+    <!-- 100/60 multiplier: 1 -->
     <dimen name="cover_edit_1_height">100dp</dimen>
-    <dimen name="cover_edit_1_width">64dp</dimen>
+    <dimen name="cover_edit_1_width">60dp</dimen>
 
     <!-- array access to cover sizes. -->
     <array name="cover_details_height">
@@ -96,13 +96,13 @@
     <dimen name="cover_browser_gallery_text_size">11sp</dimen>
     <integer name="cover_browser_gallery_span_count">1</integer>
 
-    <!-- multiplier: 0.9 -->
+    <!-- 100/60 multiplier: 0.9 -->
     <dimen name="cover_browser_gallery_height">90dp</dimen>
-    <dimen name="cover_browser_gallery_width">57dp</dimen>
+    <dimen name="cover_browser_gallery_width">54dp</dimen>
 
-    <!-- multiplier: 1.5 -->
+    <!-- 100/60 multiplier: 1.5 -->
     <dimen name="cover_browser_preview_height">150dp</dimen>
-    <dimen name="cover_browser_preview_width">96dp</dimen>
+    <dimen name="cover_browser_preview_width">90dp</dimen>
 
     <!-- BoB. The maximum width of a cover image
         indexed by the user-preference CoverScale.
@@ -119,8 +119,14 @@
         <!-- large: 4 * 40dp -->
         <item>160dp</item>
         <!-- X-large: 5 * 40dp
-            If the device is in Portrait, the text aside the image will be severely wrapped.
-            For Landscape all is ok.
+
+          List Mode:
+            4" device: If the device is in Portrait, the text aside the image
+               will be severely wrapped. For Landscape all is ok.
+            5" device: Portrait mode is cramped but usable.
+          Grid Mode:
+            This value is ignored, as Grid always uses 1 (Portrait) or 2 (Landscape) covers
+             for the entire width of the display.
         -->
         <item>200dp</item>
     </array>
