--- a/app/src/main/res/values/cover-image.xml
+++ b/app/src/main/res/values/cover-image.xml
@@ -69,7 +69,6 @@
     <!-- Book edit layout. -->
     <!-- 100/60 multiplier: 1 -->
     <dimen name="cover_edit_0_width">60dp</dimen>
-    <!-- 100/60 multiplier: 1 -->
     <dimen name="cover_edit_1_width">60dp</dimen>
 
     <!-- array access to cover sizes. -->
@@ -95,28 +94,28 @@
     <!-- BoB. The maximum width of a cover image
         indexed by the user-preference CoverScale.
 
-         The sizes are calculated as multiples of 40dp
+         The sizes are calculated as multiples of 24dp
     -->
     <array name="cover_max_width">
         <!-- hidden -->
         <item>0dp</item>
-        <!-- small: 2 * 40dp -->
-        <item>80dp</item>
-        <!-- medium: 3 * 40dp - the default. -->
-        <item>120dp</item>
-        <!-- large: 4 * 40dp -->
-        <item>160dp</item>
-        <!-- X-large: 5 * 40dp
-
+        <!-- small: 2 * 24dp -->
+        <item>48dp</item>
+        <!-- medium: 3 * 24dp - the default. -->
+        <item>72dp</item>
+        <!-- large: 4 * 24dp -->
+        <item>96dp</item>
+        <!-- X-large: 5 * 24dp
           List Mode:
-            4" device: If the device is in Portrait, the text aside the image
-               will be severely wrapped. For Landscape all is ok.
-            5" device: Portrait mode is cramped but usable.
+            4" device: this is 50% of the device width in Portrait.
+               The text aside the image will be cramped but mostly readable providing
+               not too many extra fields are displayed.
+               For Landscape all is ok.
           Grid Mode:
             This value is ignored, as Grid always uses 1 (Portrait) or 2 (Landscape) covers
              for the entire width of the display.
         -->
-        <item>200dp</item>
+        <item>120dp</item>
     </array>
 
     <!-- used as "tools:" defaults in the BoB layout.
