--- a/app/src/main/res/values/donottranslate.xml
+++ b/app/src/main/res/values/donottranslate.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2023 HardBackNutter
+  ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -94,6 +94,10 @@
             translatable="false">StripInfo</string>
     <string name="site_info_stripinfo_be"
             translatable="false">@string/site_description_dutch_catalogue_eu_comics</string>
+    <string name="site_stripweb_be"
+            translatable="false">StripWeb</string>
+    <string name="site_info_stripweb_be"
+            translatable="false">@string/site_description_dutch_comics_shopping</string>
 
     <!-- https://calibre-ebook.com -->
     <string name="site_calibre"
