--- a/app/src/main/res/xml/preferences_site_searches.xml
+++ b/app/src/main/res/xml/preferences_site_searches.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2023 HardBackNutter
+  ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -92,6 +92,12 @@
             android:fragment="com.hardbacknutter.nevertoomanybooks.searchengines.stripinfo.StripInfoBePreferencesFragment"
             android:key="psk_search_site_stripinfo"
             android:title="@string/site_stripinfo_be">
+        </Preference>
+
+        <Preference
+            android:fragment="com.hardbacknutter.nevertoomanybooks.searchengines.stripweb.StripWebPreferencesFragment"
+            android:key="psk_search_site_stripweb"
+            android:title="@string/site_stripweb_be">
         </Preference>
 
     </PreferenceCategory>
